# MRG-StudyRunner

./: .gitignore  PROJECT_RULES.md  README.md  hardware_config.json  requirements.txt  server.py  study_config.json
app/: __init__.py  admin_status_service.py  config_service.py  results_service.py  routes.py  secrets_service.py  study_client_service.py  trial_service.py  validation.py
app/integrations/: __init__.py  brainbit_adapter.py  brainbit_monitor.py  camera_affect_adapter.py  dependency_utils.py  lsl_adapter.py  mini_radar_adapter.py  notion_adapter.py  osc_adapter.py  raspi_adapter.py
brainbit/: HelloEEG_HelloMYO_01.3.toe  OUTPUT_REFERENCE.md  README_ENHANCED.md  brainbit_realtime_cli_OSC_15.py
docs/: 01_project_overview_for_everyone.md  02_data_and_terms_explained.md  03_plan_for_clearer_code.md  04_admin_panel_biosignal_console_plan.md  05_raspi_sensor_gateway.md  06_audit_2026-04-28.md
emotion_worker/: analyzer.py  requirements.txt  server.py
knomi_firmware/: CMakeLists.txt  README_flash.md  sdkconfig.defaults
knomi_firmware/main/: CMakeLists.txt  http_client.cpp  http_client.h  main.cpp  status_model.h
knomi_firmware/main/ui/: qr_lvgl.cpp  qr_lvgl.h  screen_detail.cpp  screen_detail.h  screen_home.cpp  screen_home.h  screen_network.cpp  screen_network.h  ui.cpp  ui.h
raspi/: ir_led_controller.py  sensor_brainbit.py  sensor_camera.py  sensor_emg.py  sensor_radar.py
static/: admin.html  study.html
static/css/: main.css
studies/: Neue Studie.study-runner  Test Studie 2.json  Test Studie.json  Test Studie.study-runner  Test1.study-runner
(+20 files in other folders)
